--- a/psa_car_controller/psacc/resources/car_models.yml
+++ b/psa_car_controller/psacc/resources/car_models.yml
@@ -137,7 +137,7 @@
   max_elec_consumption: 70
   max_fuel_consumption: 30
 - !CarModel
-  name: '2008'
+  name: 'New 2008'
   battery_power: 0
   fuel_capacity: 44
   abrp_name:
@@ -334,4 +334,13 @@
   abrp_name:
   reg: VR3FPHNSTN.*
   max_elec_consumption: 70
-  max_fuel_consumption: 30   
+  max_fuel_consumption: 30
+- !CarModel
+  name: New 2008
+  battery_power: 0
+  fuel_capacity: 44
+  abrp_name:
+  reg: VR3UDYHSKM.*
+  max_elec_consumption: 70
+  max_fuel_consumption: 30
+  
