--- a/psa_car_controller/psacc/resources/car_models.yml
+++ b/psa_car_controller/psacc/resources/car_models.yml
@@ -139,9 +139,17 @@
 - !CarModel
   name: '2008'
   battery_power: 0
-  fuel_capacity: 44
-  abrp_name:
+  fuel_capacity: 46
+  abrp_name: peugeot:2008:20:48
   reg: VR3USHNS.*
+  max_elec_consumption: 70
+  max_fuel_consumption: 30
+- !CarModel
+  name: '2008'
+  battery_power: 0
+  fuel_capacity: 46
+  abrp_name: peugeot:2008:20:48
+  reg: VR3UDYHS.*
   max_elec_consumption: 70
   max_fuel_consumption: 30
 - !CarModel
